--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body, html {
     width: 100%;
     height: 100%;
     font-family: Arial, sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 header {
@@ -32,7 +32,6 @@ nav ul {
     display: flex;
     margin: 0;
     padding: 0;
-    flex-wrap: wrap; /* Permite que el contenido del menú se ajuste en varias líneas si es necesario */
 }
 
 nav ul li {
@@ -53,7 +52,7 @@ nav ul li a:hover {
 .video-container {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -113,4 +112,37 @@ nav ul li a:hover {
 
 .cta-button:hover {
     background-color: #0056b3;
+}
+
+/* ESTILOS DEL SLIDER */
+.slider-container {
+    width: 100%;
+    overflow: hidden;
+    background-color: #222;
+    padding: 20px 0;
+    position: relative;
+}
+
+.slider {
+    display: flex;
+    animation: scroll 30s linear infinite;
+    color: aliceblue;
+}
+
+.slide {
+    min-width: 150px; /* Ajusta el tamaño según sea necesario */
+    margin: 0 15px;
+    text-align: center;
+    color: white;
+}
+
+.slide img {
+    width: 50px;  /*Ajusta el tamaño del ícono según sea necesario */
+    background-color: aliceblue;
+    border-radius: 5px;
+}
+
+@keyframes scroll {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
 }
