--- a/styles.css
+++ b/styles.css
@@ -1,148 +1,129 @@
-/* styles.css */
-body, html {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
     margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
     font-family: Arial, sans-serif;
-    overflow-x: hidden;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    width: 100%;
+    background-color: #222;
+    color: #fff;
+    padding: 10px 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+
+.container {
+    display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 15px;
-    box-sizing: border-box;
-    z-index: 10;
+    max-width: auto ;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 .logo {
-    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.logo-text {
+    font-size: 20px;
     font-weight: bold;
-    color: white;
+}
+
+.portfolio-text {
+    color: #ff6600;
+}
+
+nav {
+    display: flex;
+    align-items: center;
 }
 
 nav ul {
-    list-style: none;
     display: flex;
+    list-style: none;
     margin: 0;
     padding: 0;
 }
 
 nav ul li {
+    position: relative;
     margin-left: 20px;
 }
 
 nav ul li a {
-    color: white;
+    color: #fff;
     text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-}
-
-nav ul li a:hover {
-    color: #007bff;
-}
-
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-#background-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: 1;
-    transform: translate(-50%, -50%);
-    background-size: cover;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Efecto de superposición oscuro */
-    z-index: 2;
-}
-
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-    z-index: 3;
-}
-
-.content h1 {
-    font-size: 3rem;
-    margin: 0;
-}
-
-.content p {
-    font-size: 1.5rem;
-    margin: 10px 0;
-}
-
-.cta-button {
+    font-weight: bold;
     padding: 10px 20px;
-    font-size: 1.2rem;
-    color: white;
-    background-color: #007bff;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
 }
 
-.cta-button:hover {
-    background-color: #0056b3;
+nav ul li a:hover, .language-dropdown:hover > a {
+    background-color: #ff6600;
 }
 
-/* ESTILOS DEL SLIDER */
-.slider-container {
-    width: 100%;
-    overflow: hidden;
-    background-color: #222;
-    padding: 20px 0;
+nav ul .language-dropdown {
     position: relative;
 }
 
-.slider {
-    display: flex;
-    animation: scroll 30s linear infinite;
-    color: aliceblue;
+nav ul .language-dropdown .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
 }
 
-.slide {
-    min-width: 150px; /* Ajusta el tamaño según sea necesario */
-    margin: 0 15px;
-    text-align: center;
+nav ul .language-dropdown .dropdown-content li {
+    display: block;
+    text-align: left;
+}
+
+nav ul .language-dropdown .dropdown-content li a {
     color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
 }
 
-.slide img {
-    width: 50px;  /*Ajusta el tamaño del ícono según sea necesario */
-    background-color: aliceblue;
+nav ul .language-dropdown .dropdown-content li a:hover {
+    background-color: #575757;
+}
+
+.language-dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.language-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle; /* Asegura que el ícono SVG esté alineado correctamente con el texto */
+}
+
+.download-cv-button {
+    background-color: #ff6600;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
     border-radius: 5px;
+    margin-left: 20px;
+    font-weight: bold;
 }
 
-@keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
+.download-cv-button:hover {
+    background-color: #e65c00;
+}
+
+img {
+    vertical-align: middle; /* Asegura que las imágenes estén alineadas correctamente con el texto */
 }
