--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+:root{
+    --bg-primary-color: #333;
+    --bg-secondary-color:#222;
+    --secondary-color: #ff6600;
+    --tercary-color:#e65c00;
+}
+
+* {
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 header {
-    background-color: #222;
+    background-color: #333;
     color: #fff;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-evenly;
+    padding: 0 0;
+    height: 4.5rem; /* Altura fija para el header */
 }
 
 .container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between; /* Asegura que los elementos estén en extremos opuestos */
     align-items: center;
-    max-width: auto ;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 20px;
+    height: 100%; /* Asegura que el contenedor ocupe todo el alto del header */
 }
 
 .logo {
@@ -28,102 +40,98 @@ header {
 }
 
 .logo img {
-    width: 40px;
-    height: 40px;
+    height: 50px;
     margin-right: 10px;
 }
 
 .logo-text {
-    font-size: 20px;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
 .portfolio-text {
-    color: #ff6600;
+    color: var(--secondary-color);
 }
 
 nav {
     display: flex;
     align-items: center;
+    height: 100%; /* Asegura que el nav ocupe todo el alto del header */
 }
 
 nav ul {
     display: flex;
     list-style: none;
-    margin: 0;
-    padding: 0;
+    height: 100%; /* Asegura que el ul ocupe todo el alto del header */
 }
 
 nav ul li {
-    position: relative;
-    margin-left: 20px;
+    margin: 0 15px;
+    height: 100%; /* Asegura que los li ocupen todo el alto del header */
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-weight: bold;
-    padding: 10px 20px;
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    height: 100%; /* Asegura que los enlaces ocupen todo el alto del header */
+    padding: 0 10px;
 }
 
-nav ul li a:hover, .language-dropdown:hover > a {
-    background-color: #ff6600;
-}
-
-nav ul .language-dropdown {
-    position: relative;
-}
-
-nav ul .language-dropdown .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 120px;
-    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
-    right: 0;
-}
-
-nav ul .language-dropdown .dropdown-content li {
-    display: block;
-    text-align: left;
-}
-
-nav ul .language-dropdown .dropdown-content li a {
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    display: block;
-}
-
-nav ul .language-dropdown .dropdown-content li a:hover {
-    background-color: #575757;
-}
-
-.language-dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.language-icon {
-    width: 20px;
-    height: 20px;
-    vertical-align: middle; /* Asegura que el ícono SVG esté alineado correctamente con el texto */
+nav ul li a:hover {
+    background-color: var(--secondary-color);
+    color: #333;
 }
 
 .download-cv-button {
-    background-color: #ff6600;
-    color: #fff;
-    padding: 10px 20px;
+    background-color: var(--secondary-color);
+    color: #333;
+    padding: 0 15px; /* Elimina el padding superior e inferior */
     text-decoration: none;
-    border-radius: 5px;
     margin-left: 20px;
-    font-weight: bold;
+    height: 100%; /* Asegura que el botón ocupe todo el alto del header */
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centra el texto horizontalmente */
 }
 
 .download-cv-button:hover {
-    background-color: #e65c00;
+    background-color: var(--tercary-color);
+    color: aliceblue;
 }
 
-img {
-    vertical-align: middle; /* Asegura que las imágenes estén alineadas correctamente con el texto */
+/* Seccion de HOME*/ 
+
+section.home {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    max-width: 90%;
+    margin: 0 auto;
+}
+
+.home-content {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.home-content h3,
+.home-content h1,
+.home-content p {
+    margin-bottom: 15px;
+}
+
+.home-img {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.home-img video {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
