--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: rgb(0,0,0);
+    background: linear-gradient(156deg, rgba(0,0,0,1) 0%, rgba(93,37,180,1) 73%, rgba(57,0,255,1) 100%);
+    
 }
 
 :root{
-    --bg-primary-color: #333;
-    --bg-secondary-color:#222;
+    --bg-primary-color: #131e29;
+    --bg-secondary-color:#25282A;
+    --text-primary-color: #f2efe6;
     --secondary-color: #ff6600;
     --tercary-color:#e65c00;
 }
@@ -74,6 +79,7 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 1em;
+    font-weight: bold;
     display: flex;
     align-items: center;
     height: 100%; /* Asegura que los enlaces ocupen todo el alto del header */
@@ -90,6 +96,7 @@ nav ul li a:hover {
     color: #333;
     padding: 0 15px; /* Elimina el padding superior e inferior */
     text-decoration: none;
+    font-weight: bold;
     margin-left: 20px;
     height: 100%; /* Asegura que el botón ocupe todo el alto del header */
     display: flex;
@@ -110,7 +117,8 @@ section.home {
     justify-content: space-between;
     padding: 20px;
     max-width: 90%;
-    margin: 0 auto;
+    margin: 50px auto;
+    
 }
 
 .home-content {
@@ -118,10 +126,22 @@ section.home {
     margin-right: 20px;
 }
 
-.home-content h3,
-.home-content h1,
+.home-content h1{
+    font-size: 3em;
+    color: var(--text-primary-color);
+}
+.home-content h3{
+    font-size: 1.5em;
+    color: var(--text-primary-color);
+
+}
 .home-content p {
-    margin-bottom: 15px;
+    color: var(--text-primary-color);
+    margin-top: 15px;
+}
+
+.home-content p span {
+    font-weight: bold;
 }
 
 .home-img {
