--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,7 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: rgb(0,0,0);
-    background: linear-gradient(156deg, rgba(0,0,0,1) 0%, rgba(93,37,180,1) 73%, rgba(57,0,255,1) 100%);
+    background: var(--bg-primary-color);
     
 }
 
@@ -37,6 +36,10 @@ header {
     margin: 0 auto;
     padding: 0 20px;
     height: 100%; /* Asegura que el contenedor ocupe todo el alto del header */
+}
+
+span {
+    color: var(--secondary-color);
 }
 
 .logo {
@@ -109,6 +112,12 @@ nav ul li a:hover {
     color: aliceblue;
 }
 
+#menu-icon {
+    font-size: 3.6rem;
+    color: var(--text-color);
+    display: none;
+}
+
 /* Seccion de HOME*/ 
 
 section.home {
@@ -118,7 +127,6 @@ section.home {
     padding: 20px;
     max-width: 90%;
     margin: 50px auto;
-    
 }
 
 .home-content {
@@ -155,3 +163,62 @@ section.home {
     height: auto;
     border-radius: 10px;
 }
+
+
+
+/*#######################################################*/
+/*----------------------MEDYAQUERYS----------------------*/
+
+@media (max-width: 1200px) {
+    html {
+      font-size: 55%;
+    }
+}
+  
+@media (max-width: 991px) {
+    .header {
+      padding: 2rem 3%;
+    }
+
+}
+
+/*  NAVBAR */
+
+@media (max-width: 768px) {
+    #menu-icon {
+      display: block;
+    }
+  
+    .navbar {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      padding: 1rem 3%;
+      background: var(--bg-color);
+      border-top: .1rem solid rgba(0, 0, 0, .2);
+      box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+      display: none;
+    }
+  
+    .navbar .active {
+      display: block;
+    }
+  
+    .navbar a {
+      display: block;
+      font-size: 2rem;
+      margin: 3rem 0;
+    }
+  
+    .home {
+      flex-direction: column;
+    }
+  
+    .home-content h3 {
+      font-size: 2.6rem;
+    }
+  
+    .home-content h1 {
+      font-size: 5rem;
+    }
