--- a/styles2.css
+++ b/styles2.css
@@ -1,131 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-body {
-    
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-:root{
-    --bg-primary-color: #333;
-    --bg-secondary-color:#222;
-    --secondary-color: #ff6600;
-    --tercary-color:#e65c00;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-header {
-    background-color: var(--bg-secondary-color);
-    color: #fff;
-    padding: 10px 0;
-}
-
-.container {
+.portfolio {
+    background-color: #131921;
+    padding: 40px;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+  }
+  
+  .portfolio h2 {
+    font-size: 2.5em;
+    margin-bottom: 30px;
+  }
+  
+  .projects {
     display: flex;
-    justify-content: space-between; /* Asegura que los elementos estén en extremos opuestos */
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.logo {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+  }
+  
+  .project-card {
+    background-color: #1c1c1c;
+    border-radius: 10px;
+    overflow: hidden;
+    max-width: 30%;
+    flex: 1 1 calc(33% - 40px);
     display: flex;
-    align-items: center;
-}
-
-.logo img {
-    height: 50px;
-    margin-right: 10px;
-}
-
-.logo-text {
+    flex-direction: column;
+  }
+  
+  .project-card img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .project-details {
+    padding: 20px;
+    text-align: left;
+  }
+  
+  .project-details h3 {
     font-size: 1.5em;
-    font-weight: bold;
-}
-
-.portfolio-text {
-    color: var(--secondary-color);
-}
-
-nav {
+    margin-bottom: 10px;
+  }
+  
+  .project-details p {
+    margin: 5px 0;
+  }
+  
+  .project-buttons {
     display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    height: 100%;
-}
-
-nav ul li {
-    margin: 0 15px;
-    height: 100%;
-}
-
-nav ul li a {
-    color: #fff;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  
+  .project-buttons .btn {
+    background-color: #ff9900;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
     text-decoration: none;
-    font-size: 1em;
     display: flex;
     align-items: center;
-    height: 100%;
-    padding: 0 10px;
-}
-
-nav ul li a:hover {
-    background-color: var(--secondary-color);
-    color: var(--bg-secondary-color);
-}
-
-.language-dropdown {
-    position: relative;
-    height: 100%;
-}
-
-.language-dropdown .dropdown-content {
-    display: none;
-    position: absolute;
+    transition: background-color 0.3s;
+  }
+  
+  .project-buttons .btn i {
+    margin-right: 8px;
+  }
+  
+  .project-buttons .btn.github {
     background-color: #333;
-    min-width: 100px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.language-dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.language-dropdown .dropdown-content a {
-    color: #fff;
-    padding: 8px 12px;
-    text-decoration: none;
-    display: block;
-}
-
-.language-dropdown .dropdown-content a:hover {
-    background-color: #575757;
-}
-
-.download-cv-button {
-    background-color: var(--secondary-color);
-    color: var(--bg-secondary-color);
-    padding: 10px 15px;
-    text-decoration: none;
-    margin-left: 20px;
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.download-cv-button:hover {
-    background-color: #ff9800;
-    border: 2px;
-    border-color: aliceblue;
-}
+  }
+  
+  .project-buttons .btn.pagina {
+    background-color: #ff9900;
+  }
+  
+  .project-buttons .btn:hover {
+    opacity: 0.8;
+  }
