--- a/Portfolio2024/src/app/header/header.component.html
+++ b/Portfolio2024/src/app/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+    <div class="container">
+        <div class="logo">
+            <img src="icon/Metagross.png" alt="Logo">
+            <span class="logo-text">KEVINP <span class="portfolio-text">Portafolio</span></span>
+        </div>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#sobre-mi">Sobre Mi</a></li>
+                <li><a href="#portfolio">Portafolio</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+            <a href="index2.html" class="download-cv-button">Download CV</a>
+        </nav>
+    </div>
+</header>
