--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ body {
     box-sizing: border-box;
 }
 
+/*
+###############################################################
+*/
+
 header {
     background-color: var(--bg-secondary-color);
     color: #fff;
