--- a/Portfolio2024/src/app/about/about.component.html
+++ b/Portfolio2024/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="presentation">
+<section class="presentation" id="about-me">
     <div class="about-me-section">
       <div class="about-me-content">
         <img src="img/foto.jpg" alt="Kevin Pizarro" class="profile-img">
@@ -23,6 +23,5 @@
           </div>
         </div>
       </div>
-      
     </div>
 </section>
