--- a/Portfolio2024/src/app/header/header.component.css
+++ b/Portfolio2024/src/app/header/header.component.css
@@ -3,6 +3,10 @@ header{
     color: #fff;
     padding: 0 0;
     height: 4.5rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 .container {
