--- a/Portfolio2024/src/app/header/header.component.html
+++ b/Portfolio2024/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#sobre-mi">Sobre Mi</a></li>
+                <li><a href="#about-me">Sobre Mi</a></li>
                 <li><a href="#portfolio">Portafolio</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
                 <li><a href="#contacto">Contacto</a></li>
