--- a/Portfolio2024/src/app/portfolio/portfolio.component.html
+++ b/Portfolio2024/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,176 @@
-<p>portfolio works!</p>
+<section class="portfolio" id="portafolio">
+    <h2>Portafolio</h2>
+    <div class="projects">
+
+        <div class="project-card">
+            <img src="img/Unreal_Engine.png" alt="Unreal Engine">
+            <div class="project-details">
+                <h3>Portafolio Unreal Engine</h3>
+                <p>PRONTO</p>
+                <p>Portafolio de desarrollo con Unreal Engine 4 y 5</p>
+                <div class="project-buttons">
+                <!--<a href=" " target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href=" " target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a> -->
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="project-card">
+            <img src="img/Portafolio_2022.png" alt="Petshop">
+            <div class="project-details">
+                <h3>Juega un Rato!</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Desarrollo de algunos juegos utilizando stack basico de programacion front y React y Angular.</p>
+                <div class="project-buttons">
+                    <!-- <a href="https://github.com/KPBaldur/Petshop-website" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Petshop-website/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Portafolio_2023.png" alt="Portafolio 2022">
+            <div class="project-details">
+                <h3>Portafolio 2023</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Primer Protafolio con conocimientos basicos de front version 2023.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/Potfolio2023" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Potfolio2023/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Wiki-regularshow.png" alt="Regular show Wiki">
+            <div class="project-details">
+                <h3>Wiki Regular Show</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Una Wiki de la serie de Regular Show, pronto su API de acceso libre.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/RegularShowWiki" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/RegularShowWiki/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/CalculadoraBasica.png" alt="Petshop">
+            <div class="project-details">
+                <h3>Calculadora Basica JS</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Calculadora en JS con elementos basicos de interaccion con el backend.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/CalculaDoraJS" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/CalculaDoraJS/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Sun_Moon.png" alt="Petshop">
+            <div class="project-details">
+                <h3>Sun & Moon</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Proyecto con el uso de modo claro y obscuro.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/Sun-and-Moon-JS" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Sun-and-Moon-JS/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+            
+        <div class="project-card">
+            <img src="img/Api_Rick&Morty.png" alt="Rick y Morty">
+            <div class="project-details">
+                <h3>API Rick and Morty</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Ejercicio de consumo de API Rest con Javascript.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/RickyMortyWeb" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/RickyMortyWeb/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Random-Color.png" alt="Random Color">
+            <div class="project-details">
+                <h3>Random Color</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Ejercicio de front para interactuar con el DOM con JS.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/Color-RandomJS" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Color-RandomJS/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Header-examples.png" alt="Header Examles">
+            <div class="project-details">
+                <h3>Ejemplos de Header</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Practica de estilos para elementos Header de paginas Web.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/HEADER-EXAMPLES" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/HEADER-EXAMPLES/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Galeria-imagenes.png" alt="Galeria imagenes">
+            <div class="project-details">
+                <h3>Galeria de Imagenes</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Ejercicio de front para realizar pruebas con interaccion al DOM.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/Galeria-Imagenes" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Galeria-Imagenes/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Petshop.PNG" alt="Petshop">
+            <div class="project-details">
+                <h3>Petshop prueba</h3>
+                <p>HTML / CSS / JS / Bootstrap</p>
+                <p>Front de pagina Petshop realizado con Bootstrap y stack basico de programacion web.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/Petshop-website" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Petshop-website/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/Portafolio_2022.png" alt="porafolio 2022">
+            <div class="project-details">
+                <h3>Portafolio 2022</h3>
+                <p>HTML / CSS / JS</p>
+                <p>Pagina desarrollada basica de elementos HTML y CSS version 2022.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/Portfolio2022" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/Portfolio2022/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="img/fundacion_rescata.png" alt="porafolio 2022">
+            <div class="project-details">
+                <h3>Fundacion Rescata 2021</h3>
+                <p>HTML / CSS / JS / Bootstrap</p>
+                <p>Pagina desarrollada basica con framewokr Bootstrap version 2021.</p>
+                <div class="project-buttons">
+                    <a href="https://github.com/KPBaldur/FundacionRescata" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                    <a href="https://kpbaldur.github.io/FundacionRescata/index.html" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
