--- a/Portfolio2024/src/app/header/header.component.html
+++ b/Portfolio2024/src/app/header/header.component.html
@@ -9,8 +9,8 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about-me">Sobre Mi</a></li>
-                <li><a href="#portfolio">Portafolio</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#portafolio">Portafolio</a></li>
+                <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
             <a href="index2.html" class="download-cv-button">Download CV</a>
