--- a/Portfolio2024/src/app/contact/contact.component.html
+++ b/Portfolio2024/src/app/contact/contact.component.html
@@ -1,1 +1,25 @@
-<p>contact works!</p>
+<div class="contact-container" id="contacto">
+    <div class="contact-form">
+        <h1>Contacto</h1>
+        <form action="#" method="post">
+            <input type="text" name="nombre" placeholder="Nombre" required>
+            <input type="text" name="asunto" placeholder="Asunto mensaje" required>
+            <div class="inline-inputs">
+                <input type="number" name="numero" placeholder="Número" required>
+                <input type="email" name="correo" placeholder="Correo" required>
+            </div>
+            <textarea name="mensaje" placeholder="Mensaje" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+    <div class="contact-info">
+        <h2>¿Necesitas contactarme?</h2>
+        <p>Si necesitan contactarme para algún servicio freelance o cualquier otra consulta puede encontrarme en mis RRSS o llenando la información en el formulario de contacto indicando el asunto seguido de su mensaje y me pondré en contacto pronto con usted.</p>
+        <div class="social-buttons">
+            <a href="https://www.linkedin.com/in/kevin-pizarro/" target="_blank" class="linkedin"><i class='bx bxl-linkedin-square'></i> LinkedIn</a>
+            <a href="https://github.com/KPBaldur" target="_blank" class="github"><i class='bx bxl-github'></i> Github</a>
+            <a href="https://www.instagram.com/kevinp_ux_ui/" target="_blank" class="instagram"><i class='bx bxl-instagram'></i> Instagram</a>
+            <a href="https://www.behance.net/kevinpizarro1" target="_blank" class="behance"><i class='bx bxl-behance'></i> Behance</a>
+        </div>
+    </div>
+</div>
