--- a/Portfolio2024/src/app/app.component.html
+++ b/Portfolio2024/src/app/app.component.html
@@ -5,3 +5,9 @@
 <app-about></app-about>
 
 <app-portfolio></app-portfolio>
+
+<app-services></app-services>
+
+<app-contact></app-contact>
+
+<app-footer></app-footer>
