--- a/Portfolio2024/src/app/footer/footer.component.html
+++ b/Portfolio2024/src/app/footer/footer.component.html
@@ -1,30 +1,32 @@
-<div class="footer-container">
-    <div class="footer-left">
-        <h2>KEVIN P <span class="portfolio-highlight">Portfolio</span></h2>
-        <p>Fullstack Developer</p>
-        <p>Unreal Engine Developer</p>
+<footer>
+    <div class="footer-container">
+        <div class="footer-left">
+            <h2>KEVIN P <span class="portfolio-highlight">Portfolio</span></h2>
+            <p>Fullstack Developer</p>
+            <p>Unreal Engine Developer</p>
+        </div>
+        <nav class="footer-nav">
+            <ul>
+                <li><a routerLink="/">Home</a></li>
+                <li><a routerLink="/sobre-mi">Sobre mi</a></li>
+                <li><a routerLink="/portafolio">Portafolio</a></li>
+                <li><a routerLink="/servicios">Servicios</a></li>
+                <li><a routerLink="/contacto">Contacto</a></li>
+            </ul>
+        </nav>
+        <div class="footer-right">
+            <a href="#" class="download-cv">Download CV</a>
+        </div>
     </div>
-    <nav class="footer-nav">
-        <ul>
-            <li><a routerLink="/">Home</a></li>
-            <li><a routerLink="/sobre-mi">Sobre mi</a></li>
-            <li><a routerLink="/portafolio">Portafolio</a></li>
-            <li><a routerLink="/servicios">Servicios</a></li>
-            <li><a routerLink="/contacto">Contacto</a></li>
-        </ul>
-    </nav>
-    <div class="footer-right">
-        <a href="#" class="download-cv">Download CV</a>
+    <div class="footer-bottom">
+        <div class="social-media">
+            <a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://www.github.com" target="_blank" class="github"><i class='bx bxl-github'></i></a>
+            <a href="https://www.youtube.com" target="_blank" class="youtube"><i class='bx bxl-youtube'></i></a>
+            <a href="https://www.behance.net" target="_blank" class="behance"><i class='bx bxl-behance'></i></a>
+            <a href="https://www.instagram.com" target="_blank" class="instagram"><i class='bx bxl-instagram'></i></a>
+        </div>
+        <p>©Copyright. All rights reserved.</p>
     </div>
-</div>
-<div class="footer-bottom">
-    <div class="social-media">
-        <a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class='bx bxl-linkedin-square'></i></a>
-        <a href="https://www.github.com" target="_blank" class="github"><i class='bx bxl-github'></i></a>
-        <a href="https://www.youtube.com" target="_blank" class="youtube"><i class='bx bxl-youtube'></i></a>
-        <a href="https://www.behance.net" target="_blank" class="behance"><i class='bx bxl-behance'></i></a>
-        <a href="https://www.instagram.com" target="_blank" class="instagram"><i class='bx bxl-instagram'></i></a>
-    </div>
-    <p>©Copyright. All rights reserved.</p>
-    <button (click)="scrollToTop()" class="scroll-top-btn" *ngIf="showScrollTopBtn">↑ Top</button>
-</div>
+    <button (click)="scrollToTop()" class="scroll-top-btn" *ngIf="showScrollTopBtn">↑ Top</button>    
+</footer>
