--- a/Portfolio2024/src/app/contact/contact.component.css
+++ b/Portfolio2024/src/app/contact/contact.component.css
@@ -2,10 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    
-    padding: 80px;
+    padding: 200px 80px; /* Aumentado de 80px a 100px */
     border-radius: 8px;
-    
     color: #fff;
 }
 
@@ -16,15 +14,15 @@
 
 .contact-form h1 {
     font-size: 2.5em;
-    margin-bottom: 20px;
+    margin-bottom: 25px; /* Aumentado de 20px a 25px */
     font-weight: bold;
 }
 
 .contact-form input,
 .contact-form textarea {
     width: 100%;
-    padding: 15px;
-    margin-bottom: 15px;
+    padding: 18px; /* Aumentado de 15px a 18px */
+    margin-bottom: 18px; /* Aumentado de 15px a 18px */
     border: none;
     border-radius: 8px;
     background-color: #fff;
@@ -34,6 +32,7 @@
 .contact-form textarea {
     width: 100%;
     resize: none;
+    min-height: 150px; /* Aumentar la altura mínima del textarea */
 }
 
 .inline-inputs {
@@ -47,7 +46,7 @@
 
 .contact-form button {
     width: 100%;
-    padding: 15px;
+    padding: 18px; /* Aumentado de 15px a 18px */
     background-color: #ff9900;
     border: none;
     border-radius: 8px;
@@ -68,26 +67,26 @@
 
 .contact-info h2 {
     font-size: 1.8em;
-    margin-bottom: 20px;
+    margin-bottom: 25px; /* Aumentado de 20px a 25px */
     font-weight: bold;
 }
 
 .contact-info p {
-    margin-bottom: 20px;
+    margin-bottom: 25px; /* Aumentado de 20px a 25px */
     font-size: 1.1em;
 }
 
 .social-buttons {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 15px; /* Aumentado de 10px a 15px */
 }
 
 .social-buttons a {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 20px;
+    padding: 12px 25px; /* Aumentado de 10px 20px a 12px 25px */
     text-decoration: none;
     border-radius: 8px;
     font-size: 1.1em;
