--- a/Portfolio2024/src/app/footer/footer.component.html
+++ b/Portfolio2024/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
         </div>
         <nav class="footer-nav">
             <ul>
-                <li><a routerLink="/">Home</a></li>
+                <li><a routerLink="#Home">Home</a></li>
                 <li><a routerLink="/sobre-mi">Sobre mi</a></li>
                 <li><a routerLink="/portafolio">Portafolio</a></li>
                 <li><a routerLink="/servicios">Servicios</a></li>
