--- a/Portfolio2024/src/app/footer/footer.component.html
+++ b/Portfolio2024/src/app/footer/footer.component.html
@@ -28,5 +28,5 @@
         </div>
         <p>©Copyright. All rights reserved.</p>
     </div>
-    <button (click)="scrollToTop()" class="scroll-top-btn" *ngIf="showScrollTopBtn">↑ Top</button>    
+    <button (click)="scrollToTop()" class="scroll-top-btn" *ngIf="showScrollTopBtn"><i class='bx bx-up-arrow-alt'></i></button>    
 </footer>
