--- a/Portfolio2024/src/app/footer/footer.component.html
+++ b/Portfolio2024/src/app/footer/footer.component.html
@@ -7,24 +7,24 @@
         </div>
         <nav class="footer-nav">
             <ul>
-                <li><a routerLink="#Home">Home</a></li>
-                <li><a routerLink="/sobre-mi">Sobre mi</a></li>
-                <li><a routerLink="/portafolio">Portafolio</a></li>
-                <li><a routerLink="/servicios">Servicios</a></li>
-                <li><a routerLink="/contacto">Contacto</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about-me">Sobre mi</a></li>
+                <li><a href="#portafolio">Portafolio</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
         <div class="footer-right">
-            <a href="#" class="download-cv">Download CV</a>
+            <a href="CVKevinPizarro2024.pdf" download="CVKevinPizarro2024.pdf" class="download-cv">Download CV</a>
         </div>
     </div>
     <div class="footer-bottom">
         <div class="social-media">
-            <a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class='bx bxl-linkedin-square'></i></a>
-            <a href="https://www.github.com" target="_blank" class="github"><i class='bx bxl-github'></i></a>
-            <a href="https://www.youtube.com" target="_blank" class="youtube"><i class='bx bxl-youtube'></i></a>
-            <a href="https://www.behance.net" target="_blank" class="behance"><i class='bx bxl-behance'></i></a>
-            <a href="https://www.instagram.com" target="_blank" class="instagram"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.linkedin.com/in/kevin-pizarro" target="_blank" class="linkedin"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://github.com/KPBaldur" target="_blank" class="github"><i class='bx bxl-github'></i></a>
+            <a href="https://www.youtube.com/@Baldur-Dev-Arts/" target="_blank" class="youtube"><i class='bx bxl-youtube'></i></a>
+            <a href="https://www.behance.net/kevinpizarro1" target="_blank" class="behance"><i class='bx bxl-behance'></i></a>
+            <a href="https://www.instagram.com/kevinp_ux_ui/" target="_blank" class="instagram"><i class='bx bxl-instagram'></i></a>
         </div>
         <p>©Copyright. All rights reserved.</p>
     </div>
