--- a/Portfolio2024/src/app/tecnologies/tecnologies.component.css
+++ b/Portfolio2024/src/app/tecnologies/tecnologies.component.css
@@ -40,7 +40,6 @@
 
 .slide p{
     font-size: 1.5em;
-    font-family: Roboto;
     color: #f2efe6;
 }
 
@@ -57,4 +56,9 @@
     100% {
         transform: translateX(calc(-250px * 10));
     }
+}
+.icon-center{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
