--- a/portfolio2024/src/app/components/about/about.component.html
+++ b/portfolio2024/src/app/components/about/about.component.html
@@ -55,7 +55,7 @@
     <a href="https://www.linkedin.com/in/kevin-pizarro" title="Linkedin Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
       <i class="bx bxl-linkedin"></i>
     </a>
-    <a href="https://github.com/kevinp" title="GitHub Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+    <a href="https://github.com/KPBaldur" title="GitHub Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
       <i class="bx bxl-github"></i>
     </a>
     <a href="https://www.behance.net/kevinpizarro1" title="Behance Kevin Pizarro" target="_blank" rel="noopener noreferrer" aria-label="Behance">
